TEST_PROGRAMS/INVALID/05/switch_rob_brace_with_init_stmt.go
/* Switch with rob braces on id */

package main

func main() {
	switch food := "dill pickle"; food 
	{
		case "tomato":
			// Do something
		case "pepper":
			// Do something
		case "cucumber":
			// Do something
		default:
			// Do something
	}
}
